--- a/src/main/resources/templates/events/edit-event.html
+++ b/src/main/resources/templates/events/edit-event.html
@@ -42,7 +42,7 @@
                         <div class="label-holder text-white textCol d-flex justify-content-center">
                             <label for="startDate" class="h4 mb-2">Start Date</label>
                         </div>
-                        <input th:selected="${#dates.format(event.startDate, 'MM/dd/yyyy')}" type="date" class="form-control" id="startDate" name="startDate"/>
+                        <input type="date" class="form-control" id="startDate" name="startDate"/>
                     </div>
                 </div>
                 <div class="col-2 offset-1">
@@ -50,7 +50,7 @@
                         <div class="label-holder text-white textCol d-flex justify-content-center">
                             <label for="endDate" class="h4 mb-2">End Date</label>
                         </div>
-                        <input th:value="${{event.endDate}}" type="date" class="form-control" id="endDate" name="endDate"/>
+                        <input type="date" class="form-control" id="endDate" name="endDate"/>
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
             </div>
         </div>
         <div class="button-holder d-flex justify-content-center">
-            <button class="btn btn-info text-white mb-3 button" type="submit">Create event</button>
+            <button class="btn btn-outline-warning text-white mb-3 button" type="submit">Edit event</button>
         </div>
     </form>
 </main>
