Edit wines work correct

--- a/src/main/resources/templates/wines/all-wines.html
+++ b/src/main/resources/templates/wines/all-wines.html
@@ -4,7 +4,7 @@
 <body>
 <th:block th:include="~{_shared/header-user}"/>
 <main>
-    <h1 class="text-center text-white">Shops</h1>
+    <h1 class="text-center text-white">All wines</h1>
     <hr class="hr-3"/>
     <div class="row">
         <tr th:each="wine: ${wines}">
