--- a/src/main/resources/templates/wines/wine-details.html
+++ b/src/main/resources/templates/wines/wine-details.html
@@ -36,7 +36,11 @@
                 </form>
             </th:block>
             <th:block th:unless="${session.role == 'ADMIN'}">
-
+                <form class="mx-auto w-15" th:action="@{'/users/add-wine/' + ${wine.id}}" method="post">
+                    <div class="button-holder d-flex justify-content-center">
+                        <button class="btn btn-outline-info text-white mb-3" type="submit">Add to my wines</button>
+                    </div>
+                </form>
             </th:block>
         </div>
     </div>
