wine comments works somehow, but still work to do on it

--- a/src/main/resources/templates/_shared/header-user.html
+++ b/src/main/resources/templates/_shared/header-user.html
@@ -17,6 +17,9 @@
                         <a class="nav-link text-white active h7" href="/wines/all-wines">Our Wines</a>
                     </li>
                     <li class="nav-item col-md-2">
+                        <a class="nav-link text-white active h7" href="/shops/all-shops">Our Shops</a>
+                    </li>
+                    <li class="nav-item col-md-2">
                         <a class="nav-link text-white active h7" href="/news/all-news">News</a>
                     </li>
                     <li class="nav-item col-md-2">
